fully migrate to new localize from version 3